# race-results-client

./: pyproject.toml  race-results-client.spec  requirements-dev.txt  requirements.txt
doc/: EVENT_SETUP.md
src/race_results/: __main__.py  config.py  console.py  defaults.py  executive.py  log.py  settings.py
src/race_results/axware/: parser.py
src/race_results/ui/: config_dialog.py  config_dialog.ui  console_dialog.py  console_dialog.ui  generate_ui_py.ps1  main_window.py  main_window.ui  resource.qrc  resource_rc.py
src/race_results/ui/icons/: svg_to_ico.ps1
tests/mock_data/: heats_2heats_explicit.txt  heats_2heats_implicit.json  heats_2heats_implicit.txt  heats_3heats_explicit.txt  heats_3heats_implicit.json  heats_3heats_implicit.txt  results-live_bmw.json  results-live_multiday_multirow.htm  results-live_multiday_multirow.json  results_live_bmw.htm  results_live_bmw.json  results_live_multiday_multirow.htm  results_live_multiday_multirow.json  results_live_multirow.json  results_live_nesvt.json  results_live_nesvt_pnats.htm  results_live_nesvt_pnats.json  results_live_onerow.json  results_live_realtime.htm  results_live_realtime.json  results_live_realtime_realtime.json
tests/stress_test/: create_dummy_live_results.py  results_base.htm
