[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "race-results"
dynamic = ["version"]
dependencies = [
  "beautifulsoup4==4.14.3",
  "PySide6==6.10.1",
]
requires-python = ">=3.14"
authors = [
  {name = "Shamit Som", email = "shamitsom@gmail.com"},
]
description = "Race Results Live-Timing Client"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["axware", "autocross", "parser", "race-results"]
classifiers = [
  "Programming Language :: Python"
]
